# Seep

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  coverage.yml  packaging.yml
seep/: __init__.py  core.py
seep/tests/: test_core.py  test_deserialize.py
